2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: Fix stupid error in last bugfix
	* Source/Foundation/GSConfig.h.in: define GS_SIZEOF_VOIDP
	* configure.in: provide GS_SIZEOF_VOIDP

2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: clarify code for getting current thread.

2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Foundation/NSDebug.h: Bugfix reported by Frederic.De.Jaeger
	to prevent incorrect processor handling of cases where logging format
	string has no arguments.

2000-07-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: When given bad data on a socket, log a message
	and invalidate the socket handle rather than raising an exception
	and crashing.  Should make system more robust in the face of attacks.

2000-07-24  Adam Fedor  <fedor@gnu.org>

	* Source/GSTcpPort.m
	(-sendBeforeDate:msgid:components:from:reserved:]): Correct typo.

2000-07-24  Richard Frith-Macdonald <rfm@gnu.org>

	Testing directory tidied to reflect removal of old classes.
	* Source/NSTimer.m: Tidied a little.

2000-07-23  Richard Frith-Macdonald <rfm@gnu.org>

	Old DO code removed along with associated libObjects classes that it
	required - library slimmed down.

2000-07-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGCString.m: implement methods to get numeric values.
	* Source/NSGString.m: implement methods to get numeric values.

2000-07-19  Adam Fedor  <fedor@gnu.org>

	* Documentation/news.tmpl.texi: Update.
	* Documentation/todo.tmpl.texi: Update.

2000-07-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/Makefile.postamble: Improve warning messages for gdomap install
	* Source/NSProcessInfo.m: Change __MINGW32__ to __MINGW__
	* Source/GSTcpPort.m: improve encoding of local port for send over wire

2000-07-17  Adam Fedor  <fedor@gnu.org>

	* Source/NSZone.m: Remove duplicate function definitions (when 
	GS_WITH_GC is 1) already defined in NSZone.h.
