@@ -1,3 +1,9 @@
+2000-07-28  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSConnection.m: Don't create/use locks until the app
+	goes multi-threaded.
+	* Source/GSTcpPort.m: ditto.
+
 2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSTcpPort.m: Fix stupid error in last bugfix
